--- a/.gitignore
+++ b/.gitignore
@@ -73,4 +73,7 @@ Temporary Items
 !.vscode/extensions.json
 *.code-workspace
 
+# Local History for Visual Studio Code
+.history/
+
 # End of https://www.toptal.com/developers/gitignore/api/macos,vscode
